syntax = "proto3";
package assets.transactions.mint;

import "assetmantle/base/ids/v1/classificationID.v1.proto";
import "assetmantle/base/ids/v1/identityID.v1.proto";
import "assetmantle/base/lists/v1/propertyList.v1.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.IdentityID to_i_d = 3;
  ids.ClassificationID classification_i_d = 4;
  lists.PropertyList immutable_meta_properties = 5;
  lists.PropertyList immutable_properties = 6;
  lists.PropertyList mutable_meta_properties = 7;
  lists.PropertyList mutable_properties = 8;
}
